--- a/Source/Client/FlightBooking_Android/app/src/main/AndroidManifest.xml
+++ b/Source/Client/FlightBooking_Android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.FullscreenTheme" />
+        <activity
+            android:name=".FlightActivity"
+            android:theme="@style/AppTheme.FullscreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
