--- a/Source/Client/FlightBooking_Android/app/src/main/AndroidManifest.xml
+++ b/Source/Client/FlightBooking_Android/app/src/main/AndroidManifest.xml
@@ -21,16 +21,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".BookActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.FullscreenTheme"></activity>
         <activity
             android:name=".FlightFindingActivity"
-            android:theme="@style/AppTheme.FullscreenTheme">
-
-        </activity>
-        <activity
-            android:name=".SplashActivity"
             android:theme="@style/AppTheme.FullscreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,6 +33,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SplashActivity"
+            android:theme="@style/AppTheme.FullscreenTheme"></activity>
     </application>
 
 </manifest>
