--- a/Source/Client/FlightBooking_Android/app/build.gradle
+++ b/Source/Client/FlightBooking_Android/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     signingConfigs {
@@ -10,6 +11,7 @@ android {
     }
     compileSdkVersion 25
     buildToolsVersion "24.0.3"
+
     defaultConfig {
         applicationId "com.yosta.flightbooking"
         minSdkVersion 15
@@ -44,8 +46,8 @@ android {
         enabled = true
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -76,6 +78,7 @@ dependencies {
     apt "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
     compile "com.google.dagger:dagger:$DAGGER_VERSION"
     provided 'javax.annotation:jsr250-api:1.0'
+
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.daimajia.easing:library:1.0.1@aar'
