--- a/Source/Client/FlightBooking_Android/build.gradle
+++ b/Source/Client/FlightBooking_Android/build.gradle
@@ -3,14 +3,15 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'com.novoda:bintray-release:0.3.4'
+        classpath 'me.tatarka:gradle-retrolambda:3.2.3'
     }
 }
-
 allprojects {
     repositories {
         jcenter()
